# parea-langchain-rag-redis-tutorial

./: .env.sample  README.md  ingest.py  main.py  pyproject.toml
evals/: eval.py
rag/: chain.py  config.py
